--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linktree</title>
 
+    
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3205FDE3T0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3205FDE3T0');
+    </script>
 </head>
 <body>
     
