--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
 
     <ul class="box">
         <li>
+            <a href="https://github.com/YanAntunes" target="bank_">
             <img src="img/github.svg" alt="Github">
-            <a href="https://github.com/YanAntunes">
                 Github<br>
                 <sapn>Confira meus projetos</sapn>
             </a>
         </li>
         <li>
-            <a href="https://linkedin.com">
+            <a href="https://linkedin.com" target="bank_">
                 <img src="img/linkedin.svg" alt="linkedin">
                 Linkedin<br>
                 <sapn>Conheça meu curriculo</sapn>
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/yan_antunes1/">
+            <a href="https://www.instagram.com/yan_antunes1/" target="bank_">
                 <img src="img/insta.svg" alt="Instagram">
                 Instagram<br>
                 <sapn>Confira meu perfil</sapn>
             </a>
         </li>
         <li>
-            <a href="https://wa.me/5538984103230">
+            <a href="https://wa.me/5538984103230" target="bank_">
                 <img src="img/whatsapp.png" alt="whatsapp">
                 WhatsApp<br>
                 <sapn>Fale comigo pelo whatsapp</sapn>
